# IA-cppFAWAZ

./: IA_IntroRL_ENSISA_2A_TD1_Prbl2.ipynb  README.md
PokemonCPP/: CMakeLists.txt  main.cpp
PokemonCPP/Card/: Card.cpp  energyCard.cpp  player.cpp  pokemon_Card.cpp  trainer_Card.cpp
PokemonCPP/headers/: Card.h  energy_Card.h  player.h  pokemon_Card.h  trainer_Card.h
TD2/: q_learning.py  req.txt
Time series/: CMakeLists.txt  main.cpp
Time series/Headers/: GaussianGenerator.h  KNN.h  SinWaveGenerator.h  StepGenerator.h  TimeSeriesDataset.h  TimeSeriesGenerator.h
Time series/sources/: GaussianGenerator.cpp
